# django_websocket

./: .pdm.toml  LICENSE  README.md  pyproject.toml
django_websocket_master/common/: apps.py  urls.py  views.py
django_websocket_master/django_websocket/: asgi.py  settings.py  urls.py  wsgi.py
django_websocket_master/templates/: index.html
