[project]
name = ""
version = ""
description = ""
authors = [
    {name = "EITarget", email = "792293376@qq.com"},
]
license-expression = "MIT"
dependencies = [
    "django>=4.0.3",
    "channels>=3.0.4",
]
requires-python = ">=3.8"

[project.urls]
Homepage = ""

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
